--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -1,3 +1,8 @@
-<p>
-  footer works!
-</p>
+<div class="container">
+  <div class="container-limiter">
+    <div></div>
+    <div class="copyright">
+    <div>&copy; 2017 All Rights Reserved</div>
+  </div>
+  </div>
+</div>
