--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
-  <a routerLink="/header">Header</a>
-  <a routerLink="/footer">Footer</a>
+  <app-header></app-header>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
