--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,17 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: "Roboto";
+    font-size: 12px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-limiter {
+    width: 70%;
 }
