--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -38,13 +38,28 @@
     }
 }
 
+.cart {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.cart-number {
+    line-height: 18px;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    background-color: orangered;
+    font-weight: bold;
+    color: white;
+}
+
 .nav-primary li {
     margin-right: 15px;
 }
 
 .nav-secondary li {
     margin-left: 15px;
-    background-color: red;
+    background-color: orange;
     color: white;
     padding: 2px;
 }
