--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="logo-bar bar">
     <div class="logo">
-      <div>LOGO</div>
+      <div><button md-button class="text-left" routerLink="/">LOGO</button></div>
       <md-form-field>
         <input mdInput placeholder="Search" />
       </md-form-field>
@@ -10,28 +10,51 @@
       <div class="cart">
         <div class="cart-number" *ngIf="carts.length > 0">{{carts.length}}</div>
         <md-icon>shopping_basket</md-icon>
+        <div class="minicart-pop">
+          <md-card>
+            <div class="minicart-title">TAS BELANJA</div>
+            <div class="minicart-content">
+              <div class="minicart-product">
+                <img src={{imgDummy}} />
+                <div class="minicart-data-main">
+                  <div class="minicart-data-brand">Brekele</div>
+                  <div>Summer Top Bahamas</div>
+                  <div class="minicart-data-size">Ukuran: L</div>
+                  <div class="minicart-data-quantity">Jumlah: 2</div>
+                </div>
+                <div class="minicart-data-additional">
+                  <div>Rp. 249.000</div>
+                </div>
+            </div>
+        </div>
+        <div class="minicart-action">
+          <button md-button>Lihat</button>
+          <button md-button>Bayar</button>
+        </div>
+        </md-card>
       </div>
-      <div>
-        <md-icon>person</md-icon>
-      </div>
+    </div>
+    <div>
+      <md-icon>person</md-icon>
     </div>
   </div>
-  <div class="header-bar bar">
-    <div class="nav-primary">
-      <ul>
-        <li><a routerLink="/newest">TERBARU</a></li>
-        <li><a>POPULER</a></li>
-        <li><a>KAOS</a></li>
-        <li><a>KEMEJA</a></li>
-        <li><a>JAKET</a></li>
-        <li><a>AKSESORIS</a></li>
-      </ul>
-    </div>
-    <div class="nav-secondary">
-      <ul>
-        <li><a>DISKON</a></li>
-        <li><a>EDISI TERBATAS</a></li>
-      </ul>
-    </div>
+</div>
+<div class="header-bar bar">
+  <div class="nav-primary">
+    <ul>
+      <li><a routerLink="/newest">TERBARU</a></li>
+      <li><a>POPULER</a></li>
+      <li><a>KAOS</a></li>
+      <li><a>KEMEJA</a></li>
+      <li><a>JAKET</a></li>
+      <li><a>AKSESORIS</a></li>
+    </ul>
   </div>
+  <div class="nav-secondary">
+    <ul>
+      <li><a>DISKON</a></li>
+      <li><a>EDISI TERBATAS</a></li>
+    </ul>
+  </div>
+</div>
 </div>
