--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,19 @@ body {
 md-icon {
     font-size: 1.6em !important;
 }
+
+button {
+    font-size: 1em !important;
+}
+
+.small-button {
+    line-height: 0 !important;
+    height: 30px;
+}
+
+.text-left {
+    padding: 0 !important;
+    text-align: left !important;
+    width: 50px !important;
+    min-width: 50px !important;
+}
