--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -81,9 +81,29 @@ md-card {
 
 .minicart-content {
     padding: 15px;
+    max-height: 264px;
+    overflow: auto;
+
+    &::-webkit-scrollbar-track
+	{
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+		background-color: #F5F5F5;
+	}
+
+	&::-webkit-scrollbar
+	{
+		width: 6px;
+		background-color: #F5F5F5;
+	}
+
+	&::-webkit-scrollbar-thumb
+	{
+		background-color: #C5C5C5;
+	}
 }
 
 .minicart-product {
+    padding-bottom: 10px;
     display: flex;
     justify-content: center;
     img {
