--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -44,17 +44,17 @@
     <div class="nav-primary">
       <ul>
         <li><a routerLink="/newest">TERBARU</a></li>
-        <li><a routerLink="/">POPULER</a></li>
-        <li><a routerLink="/">KAOS</a></li>
-        <li><a routerLink="/">KEMEJA</a></li>
-        <li><a routerLink="/">JAKET</a></li>
-        <li><a routerLink="/">AKSESORIS</a></li>
+        <li><a routerLink="/popular">POPULER</a></li>
+        <li><a routerLink="/tee">KAOS</a></li>
+        <li><a routerLink="/shirt">KEMEJA</a></li>
+        <li><a routerLink="/jacket">JAKET</a></li>
+        <li><a routerLink="/acc">AKSESORIS</a></li>
       </ul>
     </div>
     <div class="nav-secondary">
       <ul>
-        <li><a>DISKON</a></li>
-        <li><a>EDISI TERBATAS</a></li>
+        <li><a routerLink="/discount">DISKON</a></li>
+        <li><a routerLink="/limited">EDISI TERBATAS</a></li>
       </ul>
     </div>
   </div>
