--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,17 @@
 $primary-color: #FF770D; //#EAD94E;
 $secondary-color: #E34132;
+
+$break-small: 420px;
+$break-large: 1024px;
+
+@mixin respond-to($media) {
+  @if $media == small {
+    @media only screen and (max-width: $break-small) { @content; }
+  }
+  @else if $media == medium {
+    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+  }
+  @else if $media == large {
+    @media only screen and (min-width: $break-large) { @content; }
+  }
+}
