--- a/src/styles.css
+++ b/src/styles.css
@@ -51,3 +51,13 @@ button {
 .snackbar-extra button {
     color: orange;
 }
+
+@media screen and (max-width: 480px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    .container-limiter {
+        width: 90%;
+    }
+}
