--- a/src/app/global/product-card/product-card.component.scss
+++ b/src/app/global/product-card/product-card.component.scss
@@ -1,3 +1,5 @@
+@import './../../app.component.scss';
+
 .product-card {
     width: 100%;
     display: flex;
@@ -17,7 +19,12 @@
 .product-data {
     width: 100%;
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
+
+    @include respond-to(small) { 
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
 
 .product-title {
@@ -25,7 +32,11 @@
 }
 
 .product-price {
-    padding-top: 5px;
+    padding-bottom: 0.5em;
+    text-align: right;
+    @include respond-to(small) { 
+        text-align: left;
+    }
 }
 
 .product-brand {
